--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="col-12 col-md-5 image-wrapper">
               <img
                 class="w-100"
-                src="assets/images/Resurge.png"
+                src="assets/images/resurge.png"
                 alt="Resurge"
               />
             </div>
@@ -502,7 +502,7 @@
             <div class="col-12 col-md-4 image-wrapper">
               <img
                 class="w-100"
-                src="assets/images/Resurge-supplement.png"
+                src="assets/images/resurge-supplement.png"
                 alt="Resurge supplement "
               />
             </div>
@@ -556,7 +556,7 @@
                 <div class="item-img">
                   <a href="https://0ddddza-myeq3w3qrc8cwa7q46.hop.clickbank.net" rel="nofollow"
                     ><img
-                      src="assets/images/Resurge-price1.png"
+                      src="assets/images/resurge-price1.png"
                       alt="Resurge 1 bottle Price"
                   /></a>
                 </div>
@@ -567,7 +567,7 @@
                 <div class="item-img">
                   <a href="https://0ddddza-myeq3w3qrc8cwa7q46.hop.clickbank.net" rel="nofollow"
                     ><img
-                      src="assets/images/Resurge-price6.png"
+                      src="assets/images/resurge-price6.png"
                       alt="Resurge 6 bottle Price"
                   /></a>
                 </div>
@@ -578,7 +578,7 @@
                 <div class="item-img">
                   <a href="https://0ddddza-myeq3w3qrc8cwa7q46.hop.clickbank.net" rel="nofollow"
                     ><img
-                      src="assets/images/Resurge-price3.png"
+                      src="assets/images/resurge-price3.png"
                       alt="Resurge 3 bottle Price"
                   /></a>
                 </div>
@@ -941,7 +941,7 @@
                 <div class="item-img">
                   <a href="https://0ddddza-myeq3w3qrc8cwa7q46.hop.clickbank.net" rel="nofollow"
                     ><img
-                      src="assets/images/Resurge-price1.png"
+                      src="assets/images/resurge-price1.png"
                       alt="Resurge 1 bottle buy"
                   /></a>
                 </div>
@@ -952,7 +952,7 @@
                 <div class="item-img">
                   <a href="https://0ddddza-myeq3w3qrc8cwa7q46.hop.clickbank.net" rel="nofollow"
                     ><img
-                      src="assets/images/Resurge-price6.png"
+                      src="assets/images/resurge-price6.png"
                       alt="Resurge 6 bottle buy"
                   /></a>
                 </div>
@@ -963,7 +963,7 @@
                 <div class="item-img">
                   <a href="https://0ddddza-myeq3w3qrc8cwa7q46.hop.clickbank.net" rel="nofollow"
                     ><img
-                      src="assets/images/Resurge-price3.png"
+                      src="assets/images/resurge-price3.png"
                       alt="Resurge 3 bottle buy"
                   /></a>
                 </div>
@@ -1018,7 +1018,7 @@
             <div class="col-12 col-md-4 image-wrapper">
               <img
                 class="w-100"
-                src="assets/images/Resurge-money-back-guarantee.png"
+                src="assets/images/resurge-money-back-guarantee.png"
                 alt="Resurge money back guarantee "
               />
             </div>
@@ -1163,7 +1163,7 @@
             <div class="col-12 col-lg-4">
               <div class="image-wrapper">
                 <img
-                  src="assets/images/Resurge.png"
+                  src="assets/images/resurge.png"
                   alt="Resurge buy "
                 />
               </div>
@@ -1501,7 +1501,7 @@
             <div class="col-12 col-lg-7">
               <div class="image-wrapper">
                 <img
-                  src="assets/images/Resurge-order.jpg"
+                  src="assets/images/resurge-order.jpg"
                   alt="Resurge order page"
                 />
               </div>
