--- a/disclaimer.html
+++ b/disclaimer.html
@@ -83,6 +83,9 @@
                         <br>
                         <br>Any rights not expressly granted herein are reserved.
                         <br>
+                        <br>
+                        <br><a href="https://usa-resurge.org/official" class="text-primary"><strong>Resurge Official</strong></a>
+                        <br>
                     </p>
                     </div>
                 </div>
