update file - Template-3

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -86,6 +86,8 @@
                         <br>
                         <br><a href="https://usa-resurge.org/official" class="text-primary"><strong>Resurge Official</strong></a>
                         <br>
+                        <br>
+                        <br><a href="https://usa-resurge.org/resurge" class="text-primary"><strong>Buy Resurge</strong></a>
                     </p>
                     </div>
                 </div>
